--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     </div>
     <section class="section2">
-        <div class="sct-2 container">
+        <div class="sct-2 container" data-aos-duration="1000" data-aos="fade-up">
             <header class="whatwedo">
                 <h2>What we do</h2>
                 <div class="link">
@@ -126,8 +126,8 @@
     <section class="section3">
         <div class="sct-3 container">
             <div class="sct3-h2">
-                <h2><span> Tech-Powered Financial Solutions</span></h2>
-                <div class="list">
+                <h2 data-aos="fade-right" data-aos-duration="2000"><span> Tech-Powered Financial Solutions</span></h2>
+                <div class="list" data-aos="fade-down">
                     <ul>
                         <li>
                             <h3>AI and ML based scoring engine</h3>
@@ -2639,7 +2639,7 @@
                         <img src="./assets/images/clients_images/orangeimg.svg" alt="">
                     </div>
                     <div class=" allClients col-3">
-                        <img src="./assets/images/clients_images/vodafoneimg.svg" alt="">
+                        <img src="./assets/images/clients_images/vodafoneimg.png" alt="">
                     </div>
                     <div class=" allClients col-3">
                         <img src="./assets/images/clients_images/firstbankimg.svg" alt="">
@@ -2656,7 +2656,7 @@
                     <div class="allClients col-3">
                         <img src="/assets/images/clients_images/mptimg.svg" alt="">
                     </div>
-                    <div class=" allClients col-3">
+                    <div class="allClients col-3">
                         <img src="/assets/images/clients_images/mtnimg.svg" alt="">
                     </div>
                     <div class="allClients col-3">
@@ -2667,6 +2667,296 @@
             </div>
         </div>
     </section>
+    <section class="section7">
+        <div class="container">
+            <div class="row">
+                <div class="content-teams_header">
+                    <h2>Executive team</h2>
+                </div>
+                <div class="person-line">
+                    <div class="person-box">
+                        <div class="background-img-person">
+                            <img src="./assets/images/teams_image/seymur_mammadov-1.png" alt="">
+                        </div>
+                        <h3>Seymur Mammadov</h3>
+                        <p>Chief Executive Officer</p>
+
+                    </div>
+                    <div class="person-box">
+                        <div class="background-img-person">
+                            <img src="./assets/images/teams_image/ramiz_lyapin-1.png" alt="">
+                        </div>
+                        <h3>Ramiz Lyapin</h3>
+                        <p>Advisor to the Chief Executive<br>Officer</p>
+                    </div>
+                    <div class="person-box">
+                        <div class="background-img-person">
+                            <img src="./assets/images/teams_image/tamerlan-gamidzadeh-1.png" alt="">
+                        </div>
+                        <h3>Tamerlan Gamidzadeh</h3>
+                        <p>Financial Advisor to the Chief<br>Executive Officer</p>
+                    </div>
+                </div>
+                <div class="person-line" style="flex-wrap: wrap;">
+                    <div class="person-box">
+                        <div class="background-img-person">
+                            <img src="./assets/images/teams_image/shamsiyya_ismayilova-1.png" alt="">
+                        </div>
+                        <h3>Shamsiya Ismayilova</h3>
+                        <p>Chief HR & Administrative<br>Officer</p>
+                    </div>
+                    <div class="person-box">
+                        <div class="background-img-person">
+                            <img src="./assets/images/teams_image/ali_akbar_mammadov-1.png" alt="">
+                        </div>
+                        <h3>Ali Akbar Mammadov</h3>
+                        <p>Chief Commercial Officer</p>
+                    </div>
+                    <div class="person-box">
+                        <div class="background-img-person">
+                            <img src="./assets/images/teams_image/elman-talybov-1.png" alt="">
+                        </div>
+                        <h3>Elman Talybov</h3>
+                        <p>Chief Strategy Officer</p>
+                    </div>
+                    <div class="person-box">
+                        <div class="background-img-person">
+                            <img src="./assets/images/teams_image/rauf_ismayilov-1.png" alt="">
+                        </div>
+                        <h3>Rauf Ismayilov</h3>
+                        <p>Chief Technology Officer</p>
+                    </div>
+                    <div class="person-box">
+                        <div class="background-img-person">
+                            <img src="./assets/images/teams_image/anar-aliyev-1.png" alt="">
+                        </div>
+                        <h3>Anar Aliyev</h3>
+                        <p>Chief Data Science &<br>Analytics Officer</p>
+                    </div>
+                    <div class="person-box">
+                        <div class="background-img-person">
+                            <img src="./assets/images/teams_image/farhad-huseynov-1.png" alt="">
+                        </div>
+                        <h3>Farhad Huseynov</h3>
+                        <p>Chief Financial Officer</p>
+                    </div>
+                    <div class="person-box">
+                        <div class="background-img-person">
+                            <img src="/assets/images/teams_image/natiq_alasgarzade-1.png" alt="">
+                        </div>
+                        <h3>Natiq Alasgarzade</h3>
+                        <p>Project Management Office<br>Director</p>
+                    </div>
+                    <div class="person-box">
+                        <div class="background-img-person">
+                            <img src="./assets/images/teams_image/bendeguz_seres-1.png" alt="">
+                        </div>
+                        <h3>Bendeguz Seres</h3>
+                        <p>Sales & Accounts Head</p>
+                    </div>
+                    <div class="person-box">
+                        <div class="background-img-person">
+                            <img src="./assets/images/teams_image/eldar_novruzov-1.png" alt="">
+                        </div>
+                        <h3>Eldar Novruzov</h3>
+                        <p>Regional Sales & Accounts<br>Management Director</p>
+                    </div>
+                    <div class="person-box">
+                        <div class="background-img-person">
+                            <img src="./assets/images/teams_image/elnur_rzazade-1.png" alt="">
+                        </div>
+                        <h3>Elnur Rzazade</h3>
+                        <p>Regional Sales & Accounts<br>Management Director</p>
+                    </div>
+                </div>
+
+                <div class="person-line">
+                    <div class="person-box">
+                        <div class="background-img-person">
+                            <img src="./assets/images/teams_image/selbin-alakbarova-1.png" alt="">
+                        </div>
+                        <h3>Selbin Alakbarova</h3>
+                        <p>Chief Product Officer<br>FinTech</p>
+                    </div>
+                    <div class="person-box">
+                        <div class="background-img-person">
+                            <img src="./assets/images/teams_image/fuad-musayev-1.png" alt="">
+                        </div>
+                        <h3>Fuad Musayev</h3>
+                        <p>Global Development Lead<br>FinTech</p>
+                    </div>
+                    <div class="person-box">
+                        <div class="background-img-person">
+                            <img src="./assets/images/teams_image/murad-jalilzadeh-1.png" alt="">
+                        </div>
+                        <h3>Murad Jalilzadeh</h3>
+                        <p>Senior Product Owner<br>FinTech</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="section8" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="1500"
+        data-aos-delay="500">
+        <div class="container">
+            <div class="row">
+                <div class="workwithus">
+                    <h2>Work with us</h2>
+                </div>
+                <div class="icon-content">
+                    <div class="first_iconContent">
+                        <div class="icon_WWU">
+                            <img src="/assets/images/workwithus_icons/advantage_icon_1.svg" alt="">
+                        </div>
+                        <h3>Growth And Development</h3>
+                    </div>
+                    <div class="second_iconContent">
+                        <div class="icon_WWU">
+                            <img src="/assets/images/workwithus_icons/advantage_icon_2.svg" alt="">
+                        </div>
+                        <h3>Smart And Motivated Team</h3>
+                    </div>
+                    <div class="third_iconContent">
+                        <div class="icon_WWU">
+                            <img src="/assets/images/workwithus_icons/advantage_icon_3.svg" alt="">
+                        </div>
+                        <h3>Care About Values</h3>
+                    </div>
+                </div>
+                <div class="second-WWU">
+                    <div class="img-WWU">
+                        <img src="/assets/images/workwithus_icons/workwithusimg.jpg" alt="">
+                    </div>
+                    <div class="content-box-WWU">
+                        <h3>Become part of our team</h3>
+                        <p>We are looking for passionate and talented people to join our growing team. If you want to
+                            find out your highest heart rate and fill up your life with passion, then welcome to
+                            Simbrella.</p>
+                        <div class="button-WWU">
+                            <a class="vacancies" href="">All vacancies</a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    <section class="section9" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="1500"
+        data-aos-delay="500">
+        <div class="container">
+            <div class="row">
+                <div class="news-header">
+                    <h2>Latest news</h2>
+                    <div class="news-button">
+                        <a href="">All news</a>
+                    </div>
+                </div>
+                <div class="news-line">
+                    <div class="news-box">
+                        <a href="">
+                            <img src="/assets/images/news_images/simbrelladnv.jpg" alt="">
+                            <h3>Simbrella receives ISO 27001 certification for Information
+                                Security Management System</h3>
+                            <span>May 2021</span>
+                        </a>
+                    </div>
+                    <div class="news-box">
+                        <a href="">
+                            <img src="/assets/images/news_images/orange.png" alt="">
+                            <h3>Simbrella launches "Lajor" - digital micro-lending product for Orange Money mobile
+                                wallets in Sierra Leone.</h3>
+                            <span>September 2020</span>
+                        </a>
+                    </div>
+                    <div class="news-box">
+                        <a href="">
+                            <img src="/assets/images/news_images/mpt-myanmar.jpg" alt="">
+                            <h3>Simbrella announces launch in South-East Asia via microlending partnership with MPT
+                                Myanmar.</h3>
+                            <span>August 2020</span>
+                        </a>
+                    </div>
+                    <div class="news-box">
+                        <a href="">
+                            <img src="/assets/images/news_images/fcmb.png" alt="">
+                            <h3>Simbrella launched FinTech partnership with First City Monument Bank (FCMB) in February
+                                2020.</h3>
+                            <span>February 2020</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="footer">
+                    <div class="footer-header">
+                        <div class="left-content">
+                            <h2>Contacts</h2>
+                        </div>
+                        <div class="right-tab-button">
+                            <div class="ul-button">
+                                <ul class="tabs">
+                                    <li data-id="1"><a href="#/one" class="active">AMSTERDAM</a></li>
+                                    <li class="border-li"><a href="#/two">BAKU</a></li>
+                                    <li><a href="#/three">SINGAPORE</a></li>
+                                </ul>
+                                <div class="footer-button">
+                                    <a href="">Our branches</a>
+                                </div>
+                            </div>
+
+                            <div class="footer-content">
+                                <div id="one">
+                                    <span>Headquarters</span>
+                                    <p>Teleportboulevard 130, Scalehub, Unit number 1.08, 1043 EJ Amsterdam, Netherlands
+                                    </p>
+                                    <span>E-mail</span>
+                                    <a href="mailto:amsterdam@simbrella.com">amsterdam@simbrella.com</a>
+                                </div>
+                                <div id="two">
+                                    <span>Main Operations Office</span>
+                                    <p>Jalil Mammadguluzadeh st. 102 A, City Point Business Centre, AZ1022, Baku,
+                                        Azerbaijan
+                                    </p>
+                                    <span>E-mail</span>
+                                    <a href="mailto:baku@simbrella.com">baku@simbrella.com</a>
+                                </div>
+                                <div id="three">
+                                    <span>APAC Region Office</span>
+                                    <p>163 Tras Street, #07-02, Lian Huat Building, 079024, Singapore
+                                    </p>
+                                    <span>E-mail</span>
+                                    <a href="mailto:singapore@simbrella.com">singapore@simbrella.com</a>
+                                </div>
+                            </div>
+                        </div>
+
+
+                    </div>
+                    <div class="footer-end">
+                        <div class="bottom-left">
+                            <p>Site by</p>
+                            <a href="https://www.jis.az/">Jeykhun Imanov Studio</a>
+                        </div>
+                        <div class="bottom-right">
+                            <span>Copyright ©️ 2021. All rights reserved.</span>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </footer>
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+        integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://kit.fontawesome.com/7f5f6af177.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="/assets/js/main.js"></script>
